# gpac

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  crn.py  environment.yml  main.py  mkdocs.yaml  notebook.ipynb  publish_to_pypi.txt  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  setup.py
.github/workflows/: python-publish.yml
doc/: conf.py  index.rst  sphinx-requirements.txt
docs/: index.md  requirements.txt  style.css
examples/: a_rev_to_b.py  register_machine.py
gpac/: __init__.py  __version__.py  crn.py  gpac.py  ode.py
scripts/: release.ps1  release.sh  test-build.ps1  test-build.sh
