[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=9.1.0",
    "pymdown-extensions",
]

[project]
name = "gpac"
version = "1.0.11"
description = "A Python package for extracting and processing grant data from AggieEnterprise spreadsheets."
authors = [
    { name="Dave Doty", email="doty@ucdavis.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3",
    "tabulate>=0.9",
    "scipy>=1",
    "sympy>=1",
    "numpy>=2",
    "matplotlib>=3",
    "gillespy2>=1",
    "rebop>=0.9",
    "xarray>=2025",
]

[project.urls]
Homepage = "https://github.com/dave-doty/aggie-unterprise"
Issues = "https://github.com/dave-doty/aggie-unterprise/issues"
API = "https://aggie-unterprise.readthedocs.io/"

