[project]
name = "gpac"
version = "1.1.6"
description = "A Python package for plotting differential equation trajectories, and dealing with chemical reaction networks."
authors = [
    { name="Dave Doty", email="doty@ucdavis.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "scipy>=1",
    "sympy>=1",
    "numpy>=2",
    "matplotlib>=3",
    "rebop>=0.9",
    "xarray>=2025",
    "tqdm>=4",
    "polars>=1",
    "ipywidgets>=8",
    "ipykernel>=6",
    "editdistance>=0.8",
]

[project.urls]
Homepage = "https://github.com/UC-Davis-molecular-computing/gpac"
Issues = "https://github.com/UC-Davis-molecular-computing/gpac/issues"
API = "https://gpac.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=9.1.0",
    "pymdown-extensions",
]
dev = [
    "black",
]